--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "authors": [
         {
-	      "name": "zgldh",
-	      "email": "zgldh@hotmail.com",
+	      "name": "zzhh9857",
+	      "email": "zzhh9857@foxmain.com",
 	      "role": "Original Developer"
 	},
 	{
@@ -18,7 +18,7 @@
 	}
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.5.9",
         "qiniu/php-sdk": "~7.0",
         "league/flysystem": "^1.0"
     },
